--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="description" content="first page in github">
     <meta name="application-name" content="hpu site">
     <title>Himachal Pradesh University</title>
-    <link rel="stylesheet" href="1-2.css">
-    <link rel="icon" href="unnamed.jpg">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="icon" href="assets/logo.jpg">
   </head>
   <body>
     <a name="point1">
@@ -16,7 +16,7 @@
         <table class="table_one" width="100%" >
           <tr style="color:#877600">
             <td style="text-align:right">
-              <img src="unnamed.jpg" alt="logo" width="170px">
+              <img src="assets/logo.jpg" alt="logo" width="170px">
             </td>
             <td style="text-align:center;" >
               <h1 style="font-family:comic; text-shadow:2px 2px;"> Himachal Pradesh University </h1>
