added books image

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
               <h1 style="font-family:comic; text-shadow:2px 2px;"> Himachal Pradesh University </h1>
             </td>
             <td>
-              <img src="booklogo.jpg" alt="">
+              <img src="assets/booklogo.jpg" alt="books">
             </td>
           </tr>
         </table>
