--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <link rel="icon" href="assets/logo.jpg">
   </head>
   <body>
-    <a name="point1">
     <div class="container">
+      <a name="point1"></a>
       <div class="head">
         <table class="table_one" width="100%" >
           <tr style="color:#877600">
             <td style="text-align:right">
-              <img src="assets/logo.jpg" alt="logo" width="170px">
+              <img src="assets/logo.jpg" alt="logo" width="150px">
             </td>
             <td style="text-align:center;" >
               <h1 style="font-family:comic; text-shadow:2px 2px;"> Himachal Pradesh University </h1>
@@ -29,7 +29,7 @@
       </div>
       <div class="nav_bar">
         <ul class="navbr">
-          <li><a href="#point1">HOME</a></li>
+          <li style="padding-left:45px;"><a href="#point1">HOME</a></li>
           <li><a href="#">ABOUT</a></li>
           <li><a href="#">ADMINISTRATION</a></li>
           <li><a href="#">FACULTY</a></li>
@@ -38,16 +38,42 @@
           <li><a href="#">GLIMPSES</a></li>
           <li><a href="#">INSTITUTES</a></li>
           <li><a href="#">RESULTS</a></li>
-          <li><a href="#">CONTACT</a></li>
+          <li style="padding-right:26px;"><a href="#">CONTACT</a></li>
         </ul>
       </div>
+      <br><br><br><br><br><br><br>
       <div class="area">
-        <table>
+        <table style="width:100%">
           <tr>
-            <td>
+            <td class="information">
+              <h3 >INFORMATION</h3>
               <ul class="sec_list">
-                <li><a href="#http://himachalrajbhavan.nic.in/Governor.html">CHANCELLOR</a></li>
+                <li><a href="#">CHANCELLOR</a></li>
+                <li><a href="#">VICE-CHANCELLOR</a></li>
               </ul>
+            </td>
+            <td  rowspan="2">
+              <div>
+              <img src="assets\campus4.jpg" class="gallery_" width="420px" alt="">
+            </div>
+            </td>
+            <td rowspan="2" class="notice">
+              <h3 style="margin-top:-40px ">NOTICE</h3>
+              <ul class="thrd_list">
+                <li class="this">HPU Annual Report</li>
+                <li class="this">Public Notice</li>
+                <li class="this">Merit List of Btech (CSE/IT)</li>
+                <li class="this">counselling processor of MBA fresh entry</li>
+              </ul>
+            </td>
+          </tr>
+          <tr>
+            <td class="information">
+               <h3 >SOMETHING</h3>
+               <ul class="sec_list">
+                 <li><a href="#">SOMETHING</a></li>
+                 <li><a href="#">SOMETHING</a></li>
+               </ul>
             </td>
           </tr>
         </table>
