"Register" new web added.

--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
           <li style="padding-left:45px;"><a href="#point1">HOME</a></li>
           <li><a href="#">ABOUT</a></li>
           <li><a href="#">ADMINISTRATION</a></li>
-          <li><a href="#">FACULTY</a></li>
+          <li><a href="Register.html">REGISTER</a></li>
           <li><a href="#">ADMISSIONS</a></li>
           <li><a href="#">PLACEMENTS</a></li>
           <li><a href="#">GLIMPSES</a></li>
           <li><a href="#">INSTITUTES</a></li>
           <li><a href="#">RESULTS</a></li>
-          <li style="padding-right:26px;"><a href="#">CONTACT</a></li>
+          <li style="padding-right:20.5px;"><a href="#">CONTACT</a></li>
         </ul>
       </div>
       <br><br><br><br><br><br><br>
