--- a/register.html
+++ b/register.html
@@ -30,13 +30,13 @@
           <li style="padding-left:45px;"><a href="index.html">HOME</a></li>
           <li><a href="#">ABOUT</a></li>
           <li><a href="#">ADMINISTRATION</a></li>
-          <li><a href="#">LOGIN</a></li>
+          <li><a style="padding-left:24.25px; padding-right:24px;" href="#">LOGIN</a></li>
           <li><a href="#">ADMISSIONS</a></li>
           <li><a href="#">PLACEMENTS</a></li>
           <li><a href="#">GLIMPSES</a></li>
           <li><a href="#">INSTITUTES</a></li>
           <li><a href="#">RESULTS</a></li>
-          <li style="padding-right:49px;"><a href="#">CONTACT</a></li>
+          <li style="padding-right:20.5px;"><a href="#">CONTACT</a></li>
         </ul>
       </div>
       <br><br><br><br>
@@ -54,7 +54,7 @@
           </p>
           <p>
             <label for="email">Email :</label>
-            <input class="box" type="text" name="email" value="" placeholder="example@email.com">
+            <input class="box" type="text" name="email" value="" placeholder="  example@email.com">
           </p>
           <p>
             <label for="addressline">Address :</label>
@@ -70,7 +70,7 @@
           </p>
           <p>
             <label for="phoneno">Phone No. :</label>
-            <input class="box" type="text" name="phoneno" value="" placeholder="981...">
+            <input class="box" type="text" name="phoneno" value="" placeholder=" 981...">
           </p>
         </fieldset>
         <fieldset class="more">
