corrected links error

--- a/index.html
+++ b/index.html
@@ -1,96 +1,98 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <meta name="author" content="sanketjaswal">
-    <meta name="description" content="first page in github">
-    <meta name="application-name" content="hpu site">
-    <title>Himachal Pradesh University</title>
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="icon" href="assets/logo.jpg">
-  </head>
-  <body>
-    <div class="container">
-      <a name="point1"></a>
-      <a href="#point2">BOTTOM</a>
-      <div class="head">
-        <table class="table_one" width="100%" >
-          <tr style="color:#877600">
-            <td style="text-align:right">
-              <img src="assets/logo.jpg" alt="logo" width="150px">
-            </td>
-            <td style="text-align:center;" >
-              <h1 style="font-family:comic; text-shadow:2px 2px;"> Himachal Pradesh University </h1>
-            </td>
-            <td>
-              <img src="assets/booklogo.jpg" alt="books">
-            </td>
-          </tr>
-        </table>
-      </div>
-      <div class="nav_bar">
-        <ul class="navbr">
-          <li style="padding-left:45px;"><a href="#point1">HOME</a></li>
-          <li><a href="#">ABOUT</a></li>
-          <li><a href="#">ADMINISTRATION</a></li>
-          <li><a href="Register.html">REGISTER</a></li>
-          <li><a href="#">ADMISSIONS</a></li>
-          <li><a href="#">PLACEMENTS</a></li>
-          <li><a href="#">GLIMPSES</a></li>
-          <li><a href="#">INSTITUTES</a></li>
-          <li><a href="#">RESULTS</a></li>
-          <li style="padding-right:20.5px;"><a href="#">CONTACT</a></li>
-        </ul>
-      </div>
-      <br><br><br><br><br><br><br>
-      <div class="area">
-        <table style="width:100%">
-          <tr>
-            <td class="information">
-              <h3 >INFORMATION</h3>
-              <ul class="sec_list">
-                <li><a href="#">CHANCELLOR</a></li>
-                <li><a href="#">VICE-CHANCELLOR</a></li>
-              </ul>
-            </td>
-            <td  rowspan="2">
-              <div>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="author" content="sanketjaswal">
+  <meta name="description" content="first page in github">
+  <meta name="application-name" content="hpu site">
+  <title>Himachal Pradesh University</title>
+  <link rel="stylesheet" href="css/main.css">
+  <link rel="icon" href="assets/logo.jpg">
+
+</head>
+
+<body>
+  <a name="point1"></a>
+  <div class="container">
+    <!-- <a href="#point2">BOTTOM</a> -->
+    <div class="head">
+      <table class="table_one" width="100%">
+        <tr style="color:#877600">
+          <td style="text-align:right">
+            <img src="assets/logo.jpg" alt="logo" width="150px">
+          </td>
+          <td style="text-align:center;">
+            <h1 style="font-family:comic; text-shadow:2px 2px;"> Himachal Pradesh University </h1>
+          </td>
+          <td>
+            <img src="assets/booklogo.jpg" alt="books">
+          </td>
+        </tr>
+      </table>
+    </div>
+    <div class="nav_bar">
+      <ul class="navbr">
+        <li style="padding-left:45px;"><a href="#">HOME</a></li>
+        <li><a href="#">ABOUT</a></li>
+        <li><a href="#">ADMINISTRATION</a></li>
+        <li><a href="register.html">REGISTER</a></li>
+        <li><a href="#">ADMISSIONS</a></li>
+        <li><a href="#">PLACEMENTS</a></li>
+        <li><a href="#">GLIMPSES</a></li>
+        <li><a href="#">INSTITUTES</a></li>
+        <li><a href="#">RESULTS</a></li>
+        <li style="padding-right:20.5px;"><a href="#">CONTACT</a></li>
+      </ul>
+    </div>
+    <br><br><br><br><br>
+    <div class="area">
+      <table style="width:100%">
+        <tr>
+          <td class="information">
+            <h3>INFORMATION</h3>
+            <ul class="sec_list">
+              <li><a href="#">CHANCELLOR</a></li>
+              <li><a href="#">VICE-CHANCELLOR</a></li>
+            </ul>
+          </td>
+          <td rowspan="2">
+            <div>
               <img src="assets\campus4.jpg" class="gallery_" width="420px" alt="">
             </div>
-            </td>
-            <td rowspan="2" class="notice">
-              <h3 style="margin-top:-40px ">NOTICE</h3>
-              <ul class="thrd_list">
-                <li class="this">HPU Annual Report</li>
-                <li class="this">Public Notice</li>
-                <li class="this">Merit List of Btech (CSE/IT)</li>
-                <li class="this">counselling processor of MBA fresh entry</li>
-              </ul>
-            </td>
-          </tr>
-          <tr>
-            <td class="information">
-               <h3 >SOMETHING</h3>
-               <ul class="sec_list">
-                 <li><a href="#">SOMETHING</a></li>
-                 <li><a href="#">SOMETHING</a></li>
-               </ul>
-            </td>
-          </tr>
-        </table>
-      </div>
-      <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-      <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-          <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-            <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-              <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-                <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-                <div class="">
-                <a href="#point1">devshrestha</a>
-                <a name="point2"></a>
-                </div>
-
+          </td>
+          <td rowspan="2" class="notice">
+            <h3 style="margin-top:-40px ">NOTICE</h3>
+            <ul class="thrd_list">
+              <li class="this">HPU Annual Report</li>
+              <li class="this">Public Notice</li>
+              <li class="this">Merit List of Btech (CSE/IT)</li>
+              <li class="this">counselling processor of MBA fresh entry</li>
+            </ul>
+          </td>
+        </tr>
+        <tr>
+          <td class="information">
+            <h3>SOMETHING</h3>
+            <ul class="sec_list">
+              <li><a href="#">SOMETHING</a></li>
+              <li><a href="#">SOMETHING</a></li>
+            </ul>
+          </td>
+        </tr>
+      </table>
     </div>
-  </body>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <div class="">
+      <h2><a href="#point1">HOME</a></h2>
+      <a name="point2"></a>
+    </div>
+  </div>
+</body>
+
 </html>
