--- a/register.html
+++ b/register.html
@@ -5,7 +5,7 @@
     <meta name="author" content="sanketjaswal">
     <meta name="description" content="making form in HPU">
     <title>Register/Himachal Pradesh University</title>
-    <link rel="stylesheet" href="css/Register.css">
+    <link rel="stylesheet" href="css/register.css">
     <link rel="icon" href="assets/logo.jpg">
   </head>
   <body>
