--- a/register.html
+++ b/register.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+
   <head>
     <meta charset="utf-8">
     <meta name="author" content="sanketjaswal">
     <meta name="description" content="making form in HPU">
     <title>Register/Himachal Pradesh University</title>
     <link rel="stylesheet" href="css/register.css">
+    <link rel="stylesheet" href="css/register_form.css">
     <link rel="icon" href="assets/logo.jpg">
   </head>
+
   <body>
     <div class="container">
       <div class="head">
-        <table class="table_one" width="100%" >
+        <table class="table_one" width="100%">
           <tr style="color:#877600">
             <td style="text-align:right">
               <img src="assets/logo.jpg" alt="logo" width="150px">
             </td>
-            <td style="text-align:center;" >
+            <td style="text-align:center;">
               <h1 style="font-family:comic; text-shadow:2px 2px;"> Himachal Pradesh University </h1>
             </td>
             <td>
@@ -41,43 +44,43 @@
       </div>
       <br><br><br><br>
       <div class="forms">
-        <form class="this" action="" method="post">
-          <fieldset class="rgistr">
-            <legend><h2>Personal Information</h2></legend>
-          <p>
-          <label for="firstname">First Name :</label>
-          <input class="box" type="text" name="firstname" value="" placeholder="">
-          </p>
-          <p>
-            <label for="lastname">Last Name :</label>
-            <input class="box" type="text" name="lastname" value="">
-          </p>
-          <p>
-            <label for="email">Email :</label>
-            <input class="box" type="text" name="email" value="" placeholder="  example@email.com">
-          </p>
-          <p>
-            <label for="addressline">Address :</label>
-            <input class="box" type="text" name="addressline" value="">
-          </p>
-          <p>
-            <label for="fathername">Father Name :</label>
-            <input class="box" type="text" name="fathername" value="">
-          </p>
-          <p>
-            <label for="mothername">Mother Name:</label>
-            <input class="box" type="text" name="mothername" value="">
-          </p>
-          <p>
-            <label for="phoneno">Phone No. :</label>
-            <input class="box" type="text" name="phoneno" value="" placeholder=" 981...">
-          </p>
-        </fieldset>
-        <fieldset class="more">
-          <legend><h2 ></h2></legend>
-        </fieldset>
-        </form>
+        <div class="form-style-5">
+          <form>
+            <fieldset>
+              <legend><span class="number">1</span> Candidate Info</legend>
+              <input type="text" name="field1" placeholder="Your Name *">
+              <input type="email" name="field2" placeholder="Your Email *">
+              <textarea name="field3" placeholder="About yourself"></textarea>
+              <label for="job">Interests:</label>
+              <select id="job" name="field4">
+<optgroup label="Indoors">
+  <option value="fishkeeping">Fishkeeping</option>
+  <option value="reading">Reading</option>
+  <option value="boxing">Boxing</option>
+  <option value="debate">Debate</option>
+  <option value="gaming">Gaming</option>
+  <option value="snooker">Snooker</option>
+  <option value="other_indoor">Other</option>
+</optgroup>
+<optgroup label="Outdoors">
+  <option value="football">Football</option>
+  <option value="swimming">Swimming</option>
+  <option value="fishing">Fishing</option>
+  <option value="climbing">Climbing</option>
+  <option value="cycling">Cycling</option>
+  <option value="other_outdoor">Other</option>
+</optgroup>
+</select>
+            </fieldset>
+            <fieldset>
+              <legend><span class="number">2</span> Additional Info</legend>
+              <textarea name="field3" placeholder="About Your School"></textarea>
+            </fieldset>
+            <input type="submit" value="Apply" />
+          </form>
+        </div>
       </div>
     </div>
   </body>
+
 </html>
