--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <td class="information">
             <h3>INFORMATION</h3>
             <ul class="sec_list">
-              <li><a href="#">CHANCELLOR</a></li>
+              <li><a href="https://himachalrajbhavan.nic.in/Governor.html">CHANCELLOR</a></li>
               <li><a href="#">VICE-CHANCELLOR</a></li>
             </ul>
           </td>
@@ -85,13 +85,18 @@
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    <div class="">
-      <h2><a href="#point1">HOME</a></h2>
-      <a name="point2"></a>
-    </div>
+    <!-- <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br> -->
+    <!-- <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br> -->
+  </div>
+  <div class="footr">
+    <ul class="fot">
+      <li><a style="padding-left:270px" href="#">DISCLAIMER </a></li>
+      <li><a style="padding-left:50px" href="#">CONTACTS</a></li>
+      <li><a style="padding-left:50px" href="#">DOWNLOADS</a></li>
+      <li><a style="padding-left:50px" href="#">RELATED LINKS</a></li>
+      <li><a style="padding-left:50px" href="#point1">HOME</a></li>
+    </ul>
+    <a name="point2"></a>
   </div>
 </body>
 
