--- a/index.html
+++ b/index.html
@@ -90,12 +90,28 @@
   </div>
   <div class="footr">
     <ul class="fot">
-      <li><a style="padding-left:270px" href="#">DISCLAIMER </a></li>
+      <li><a style="padding-left:270px" href="#">HOME</a></li>
+      <li><a style="padding-left:50px" href="#">DISCLAIMER </a></li>
       <li><a style="padding-left:50px" href="#">CONTACTS</a></li>
       <li><a style="padding-left:50px" href="#">DOWNLOADS</a></li>
       <li><a style="padding-left:50px" href="#">RELATED LINKS</a></li>
-      <li><a style="padding-left:50px" href="#point1">HOME</a></li>
     </ul>
+    <br>
+    <br>
+    <br>
+    <p class="par">
+      Website designed by NIC.Content on this website is published and managed by Himachal Pradesh University. For any query regarding this website, Please contact the Web Information Manager: webhpuniv@gmail.com.
+    </p>
+    <p class="par2">
+      Contact for RUSA Exam Enquiry for 1st Semester 2017 onwards: hpu.ccentre@gmail.com;+91-(0177)-2833648;2833901
+E-Mail IDs: vc_hpu@hotmail.com; registrar.hpu@gmail.com; coehpu@rediffmail.com; deanstudies@gmail.com RUSA E-Mail ID: rusahpu@gmail.com
+Contact for H.P.U. Enquiry: +91-(0177)-2830958, 28333555, 2833515; RUSA Examination Enquiry: +91-(0177)-2833592; 2833423;2833648
+
+    </p>
+    <p class="credits">
+      Made by :- <a class="crename" href="https://github.com/sanketjaswal">sanketjaswal</a>
+    </p>
+    <hr>
     <a name="point2"></a>
   </div>
 </body>
