added credits page

--- a/index.html
+++ b/index.html
@@ -1,119 +1,119 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 
-<head>
-  <meta charset="utf-8">
-  <meta name="author" content="sanketjaswal">
-  <meta name="description" content="first page in github">
-  <meta name="application-name" content="hpu site">
-  <title>Himachal Pradesh University</title>
-  <link rel="stylesheet" href="css/main.css">
-  <link rel="icon" href="assets/logo.jpg">
+  <head>
+    <meta charset="utf-8">
+    <meta name="author" content="sanketjaswal">
+    <meta name="description" content="first page in github">
+    <meta name="application-name" content="hpu site">
+    <title>Himachal Pradesh University</title>
+    <link rel="stylesheet" href="css/main/main.css">
+    <link rel="icon" href="assets/logo.jpg">
 
-</head>
+  </head>
 
-<body>
-  <a name="point1"></a>
-  <div class="container">
-    <!-- <a href="#point2">BOTTOM</a> -->
-    <div class="head">
-      <table class="table_one" width="100%">
-        <tr style="color:#877600">
-          <td style="text-align:right">
-            <img src="assets/logo.jpg" alt="logo" width="150px">
-          </td>
-          <td style="text-align:center;">
-            <h1 style="font-family:comic; text-shadow:2px 2px;"> Himachal Pradesh University </h1>
-          </td>
-          <td>
-            <img src="assets/booklogo.jpg" alt="books">
-          </td>
-        </tr>
-      </table>
+  <body class="body_">
+    <!-- <a name="point1"></a> -->
+    <div class="container">
+      <!-- <a href="#point2">BOTTOM</a> -->
+      <div class="head">
+        <table class="table_one" width="100%">
+          <tr style="color:#877600">
+            <td style="text-align:right">
+              <img src="assets/logo.jpg" alt="logo" width="150px">
+            </td>
+            <td style="text-align:center;">
+              <h1 style="font-family:comic; text-shadow:2px 2px;"> Himachal Pradesh University </h1>
+            </td>
+            <td>
+              <img src="assets/booklogo.jpg" alt="books">
+            </td>
+          </tr>
+        </table>
+      </div>
+      <div class="nav_bar">
+        <ul class="navbr">
+          <li style="padding-left:45px;"><a href="#">HOME</a></li>
+          <li><a href="#">ABOUT</a></li>
+          <li><a href="#">ADMINISTRATION</a></li>
+          <li><a href="register.html">REGISTER</a></li>
+          <li><a href="#">ADMISSIONS</a></li>
+          <li><a href="#">PLACEMENTS</a></li>
+          <li><a href="#">GLIMPSES</a></li>
+          <li><a href="#">INSTITUTES</a></li>
+          <li><a href="#">RESULTS</a></li>
+          <li style="padding-right:20.5px;"><a href="#">CONTACT</a></li>
+        </ul>
+      </div>
+      <br><br><br>
+      <p style="color:#1084f7">( A State University Accredited with 'A' Grade by NAAC )</p>
+      <div class="area">
+        <table style="width:100%">
+          <tr>
+            <td class="information">
+              <h3>INFORMATION</h3>
+              <ul class="sec_list">
+                <li><a href="https://himachalrajbhavan.nic.in/Governor.html">CHANCELLOR</a></li>
+                <li><a href="#">VICE-CHANCELLOR</a></li>
+              </ul>
+            </td>
+            <td rowspan="2">
+              <div>
+                <img src="assets\campus4.jpg" class="gallery_" width="420px" alt="">
+              </div>
+            </td>
+            <td rowspan="2" class="notice">
+              <h3 style="margin-top:-40px ">NOTICE</h3>
+              <ul class="thrd_list">
+                <li class="this">HPU Annual Report</li>
+                <li class="this">Public Notice</li>
+                <li class="this">Merit List of Btech (CSE/IT)</li>
+                <li class="this">counselling processor of MBA fresh entry</li>
+              </ul>
+            </td>
+          </tr>
+          <tr>
+            <td class="information">
+              <h3>SOMETHING</h3>
+              <ul class="sec_list">
+                <li><a href="#">SOMETHING</a></li>
+                <li><a href="#">SOMETHING</a></li>
+              </ul>
+            </td>
+          </tr>
+        </table>
+      </div>
+      <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+      <!-- <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br> -->
+      <!-- <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br> -->
+      <!-- <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br> -->
+      <!-- <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br> -->
     </div>
-    <div class="nav_bar">
-      <ul class="navbr">
-        <li style="padding-left:45px;"><a href="#">HOME</a></li>
-        <li><a href="#">ABOUT</a></li>
-        <li><a href="#">ADMINISTRATION</a></li>
-        <li><a href="register.html">REGISTER</a></li>
-        <li><a href="#">ADMISSIONS</a></li>
-        <li><a href="#">PLACEMENTS</a></li>
-        <li><a href="#">GLIMPSES</a></li>
-        <li><a href="#">INSTITUTES</a></li>
-        <li><a href="#">RESULTS</a></li>
-        <li style="padding-right:20.5px;"><a href="#">CONTACT</a></li>
+    <div class="footr">
+      <ul class="fot">
+        <li><a style="padding-left:270px" href="#">HOME</a></li>
+        <li><a style="padding-left:50px" href="#">DISCLAIMER </a></li>
+        <li><a style="padding-left:50px" href="#">CONTACTS</a></li>
+        <li><a style="padding-left:50px" href="#">DOWNLOADS</a></li>
+        <li><a style="padding-left:50px" href="#">RELATED LINKS</a></li>
       </ul>
-    </div>
-    <br><br><br><br><br>
-    <div class="area">
-      <table style="width:100%">
-        <tr>
-          <td class="information">
-            <h3>INFORMATION</h3>
-            <ul class="sec_list">
-              <li><a href="https://himachalrajbhavan.nic.in/Governor.html">CHANCELLOR</a></li>
-              <li><a href="#">VICE-CHANCELLOR</a></li>
-            </ul>
-          </td>
-          <td rowspan="2">
-            <div>
-              <img src="assets\campus4.jpg" class="gallery_" width="420px" alt="">
-            </div>
-          </td>
-          <td rowspan="2" class="notice">
-            <h3 style="margin-top:-40px ">NOTICE</h3>
-            <ul class="thrd_list">
-              <li class="this">HPU Annual Report</li>
-              <li class="this">Public Notice</li>
-              <li class="this">Merit List of Btech (CSE/IT)</li>
-              <li class="this">counselling processor of MBA fresh entry</li>
-            </ul>
-          </td>
-        </tr>
-        <tr>
-          <td class="information">
-            <h3>SOMETHING</h3>
-            <ul class="sec_list">
-              <li><a href="#">SOMETHING</a></li>
-              <li><a href="#">SOMETHING</a></li>
-            </ul>
-          </td>
-        </tr>
-      </table>
-    </div>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    <!-- <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br> -->
-    <!-- <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br> -->
-  </div>
-  <div class="footr">
-    <ul class="fot">
-      <li><a style="padding-left:270px" href="#">HOME</a></li>
-      <li><a style="padding-left:50px" href="#">DISCLAIMER </a></li>
-      <li><a style="padding-left:50px" href="#">CONTACTS</a></li>
-      <li><a style="padding-left:50px" href="#">DOWNLOADS</a></li>
-      <li><a style="padding-left:50px" href="#">RELATED LINKS</a></li>
-    </ul>
-    <br>
-    <br>
-    <br>
-    <p class="par">
-      Website designed by NIC.Content on this website is published and managed by Himachal Pradesh University. For any query regarding this website, Please contact the Web Information Manager: webhpuniv@gmail.com.
-    </p>
-    <p class="par2">
-      Contact for RUSA Exam Enquiry for 1st Semester 2017 onwards: hpu.ccentre@gmail.com;+91-(0177)-2833648;2833901
-E-Mail IDs: vc_hpu@hotmail.com; registrar.hpu@gmail.com; coehpu@rediffmail.com; deanstudies@gmail.com RUSA E-Mail ID: rusahpu@gmail.com
-Contact for H.P.U. Enquiry: +91-(0177)-2830958, 28333555, 2833515; RUSA Examination Enquiry: +91-(0177)-2833592; 2833423;2833648
+      <br>
+      <br>
+      <br>
+      <p class="par">
+        Website designed by NIC.Content on this website is published and managed by Himachal Pradesh University. For any query regarding this website, Please contact the Web Information Manager: webhpuniv@gmail.com.
+      </p>
+      <p class="par2">
+        Contact for RUSA Exam Enquiry for 1st Semester 2017 onwards: hpu.ccentre@gmail.com;+91-(0177)-2833648;2833901 E-Mail IDs: vc_hpu@hotmail.com; registrar.hpu@gmail.com; coehpu@rediffmail.com; deanstudies@gmail.com RUSA E-Mail ID: rusahpu@gmail.com Contact
+        for H.P.U. Enquiry: +91-(0177)-2830958, 28333555, 2833515; RUSA Examination Enquiry: +91-(0177)-2833592; 2833423;2833648
 
-    </p>
-    <p class="credits">
-      Made by :- <a class="crename" href="https://github.com/sanketjaswal">sanketjaswal</a>
-    </p>
-    <hr>
-    <a name="point2"></a>
-  </div>
-</body>
+      </p>
+      <p class="credits">
+        Made by :- <a class="crename" href="credits.html">sanketjaswal</a>
+      </p>
+      <hr>
+      <a name="point2"></a>
+    </div>
+  </body>
 
 </html>
