--- a/register.html
+++ b/register.html
@@ -6,12 +6,12 @@
     <meta name="author" content="sanketjaswal">
     <meta name="description" content="making form in HPU">
     <title>Register/Himachal Pradesh University</title>
-    <link rel="stylesheet" href="css/register.css">
-    <link rel="stylesheet" href="css/register_form.css">
+    <link rel="stylesheet" href="css/register/register.css">
+    <link rel="stylesheet" href="css/register/register_form.css">
     <link rel="icon" href="assets/logo.jpg">
   </head>
 
-  <body>
+  <body class="body_">
     <div class="container">
       <div class="head">
         <table class="table_one" width="100%">
@@ -80,6 +80,33 @@
           </form>
         </div>
       </div>
+    </div>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+    <div class="footr">
+      <ul class="fot">
+        <li><a style="padding-left:270px" href="#">HOME</a></li>
+        <li><a style="padding-left:50px" href="#">DISCLAIMER </a></li>
+        <li><a style="padding-left:50px" href="#">CONTACTS</a></li>
+        <li><a style="padding-left:50px" href="#">DOWNLOADS</a></li>
+        <li><a style="padding-left:50px" href="#">RELATED LINKS</a></li>
+      </ul>
+      <br>
+      <br>
+      <br>
+      <p class="par">
+        Website designed by NIC.Content on this website is published and managed by Himachal Pradesh University. For any query regarding this website, Please contact the Web Information Manager: webhpuniv@gmail.com.
+      </p>
+      <p class="par2">
+        Contact for RUSA Exam Enquiry for 1st Semester 2017 onwards: hpu.ccentre@gmail.com;+91-(0177)-2833648;2833901 E-Mail IDs: vc_hpu@hotmail.com; registrar.hpu@gmail.com; coehpu@rediffmail.com; deanstudies@gmail.com RUSA E-Mail ID: rusahpu@gmail.com Contact
+        for H.P.U. Enquiry: +91-(0177)-2830958, 28333555, 2833515; RUSA Examination Enquiry: +91-(0177)-2833592; 2833423;2833648
+
+      </p>
+      <p class="credits">
+        Made by :- <a class="crename" href="credits.html">sanketjaswal</a>
+      </p>
+      <hr>
+      <a name="point2"></a>
     </div>
   </body>
 
