--- a/credits.html
+++ b/credits.html
@@ -27,7 +27,7 @@
         <!-- <a href="#"><i class="fa fa-instagram"></i></a> -->
         <!-- <a href="#"><i class="fa fa-email"></i></a> -->
         <a href="https://github.com/sanketjaswal"><i class="fa fa-github"></i></a>
-        <a href="https://www.facebook.com/"><i class="fa fa-facebook"></i></a>
+        <a href="https://www.facebook.com/jaswalsan"><i class="fa fa-facebook"></i></a>
       </div>
       <p><button>Contact</button></p>
     </div>
